--- a/09.01.2021.html
+++ b/09.01.2021.html
@@ -10,21 +10,72 @@
     <link rel='stylesheet' type='text/css' href='src/css/owl.theme.default.min.css'>
     <link rel='stylesheet' type='text/css' href='src/css/owl.theme.green.min.css'>
     <style>
-        @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+        /* cyrillic-ext */
+        @font-face {
+            font-family: 'Montserrat';
+            font-style: normal;
+            font-weight: 400;
+            font-display: swap;
+            src: url(https://fonts.gstatic.com/s/montserrat/v15/JTUSjIg1_i6t8kCHKm459WRhyzbi.woff2) format('woff2');
+            unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
+        }
+
+        /* cyrillic */
+        @font-face {
+            font-family: 'Montserrat';
+            font-style: normal;
+            font-weight: 400;
+            font-display: swap;
+            src: url(https://fonts.gstatic.com/s/montserrat/v15/JTUSjIg1_i6t8kCHKm459W1hyzbi.woff2) format('woff2');
+            unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+        }
+
+        /* vietnamese */
+        @font-face {
+            font-family: 'Montserrat';
+            font-style: normal;
+            font-weight: 400;
+            font-display: swap;
+            src: url(https://fonts.gstatic.com/s/montserrat/v15/JTUSjIg1_i6t8kCHKm459WZhyzbi.woff2) format('woff2');
+            unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
+        }
+
+        /* latin-ext */
+        @font-face {
+            font-family: 'Montserrat';
+            font-style: normal;
+            font-weight: 400;
+            font-display: swap;
+            src: url(https://fonts.gstatic.com/s/montserrat/v15/JTUSjIg1_i6t8kCHKm459Wdhyzbi.woff2) format('woff2');
+            unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+        }
+
+        /* latin */
+        @font-face {
+            font-family: 'Montserrat';
+            font-style: normal;
+            font-weight: 400;
+            font-display: swap;
+            src: url(https://fonts.gstatic.com/s/montserrat/v15/JTUSjIg1_i6t8kCHKm459Wlhyw.woff2) format('woff2');
+            unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+        }
 
         * {
             box-sizing: border-box;
         }
 
         body {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
             font-family: "Montserrat", sans-serif;
             font-size: 14px;
             background-color: #f4f6f8;
+        }
+
+        .container-fluid {
+            /* display: flex;
+            align-items: center;
+            justify-content: center; */
+            height: 100vh;
+            margin: 0;
         }
 
         .container {
@@ -113,12 +164,12 @@
         }
 
         .owl-item {
-            height: 100vh;
+            height: calc(100vh - 200px);
         }
 
         .prev-owl {
             position: absolute;
-            bottom: 150px;
+            bottom: 10px;
             color: #f50000;
             left: 43%;
             font-size: 14px;
@@ -126,7 +177,7 @@
 
         .next-owl {
             position: absolute;
-            bottom: 150px;
+            bottom: 10px;
             color: #f50000;
             right: 43%;
             font-size: 14px;
@@ -136,14 +187,35 @@
             margin-top: 0;
             height: 0;
         }
+
+        .text-center {
+            text-align: center;
+        }
+
+        @media screen and (max-width: 768px) {
+            .prev-owl {
+                left: 10%;
+            }
+
+            .next-owl {
+                right: 10%;
+            }
+
+        }
     </style>
 </head>
 
 <body>
-    <div class="owl-carousel owl-theme">
+
+    <div class="text-center" style="margin-bottom:20px">
+        <h1>Beautiful Memory</h2>
+            <span>09 Jan 2021</span>
     </div>
-    <!-- <script src='src\js\jquery-3.5.1.min.js'></script> -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <div class="container-fluid">
+        <div class="owl-carousel owl-theme" id="carousel">
+        </div>
+    </div>
+    <script src='src/js/jquery-3.5.1.min.js'></script>
 
     <script src='src/js/owl.carousel.min.js'></script>
 
@@ -153,32 +225,57 @@
             url: "ListImage.xml",
             dataType: "xml",
             success: function (xml) {
-                console.log(xml);
                 $(xml).find('url').each(function () {
                     var image = "Images/" + $(this).text();
-                    console.log(image);
+                    // console.log(image);
                     var template = ' <div class="container"><div class="container__image" style=\'background-image: url("' + image + '")\'>' +
                         '<div class="container__info container__author">Design by <a class="link" href="https://www.facebook.com/huyduong020998" target="_blank">Huy Duong</a></div>' +
                         '<div class="container__info container__location">09 Jan 2021 </div></div></div>';
                     $(".owl-carousel").append(template);
                 });
+
+                InitOwlCarousel();
             }
         });
 
-
-        $(document).ready(function () {
-            $('.owl-carousel').owlCarousel({
-                loop: true,
-                dots: false,
-                nav: true,
-                navText: ["<div class='prev-owl'>PREV</div>", "<div class='next-owl'>NEXT</div>"],
-                items: 1,
-                animateIn: "scaleUp",
-                autoplay: true,
-                autoplayTimeout: 3000,
-                autoplayHoverPause: true
-            });
-        });
+        function InitOwlCarousel() {
+            var screen = $(window).width();
+            if (screen > 789) {
+                console.log("adasdas");
+                $('#carousel').owlCarousel({
+                    loop: true,
+                    dots: false,
+                    nav: true,
+                    navText: ["<div class='prev-owl'>PREV</div>", "<div class='next-owl'>NEXT</div>"],
+                    items: 1,
+                    animateIn: "scaleUp",
+                    autoplay: true,
+                    autoplayTimeout: 3000,
+                    autoplayHoverPause: true
+                });
+            } else {
+                $(".owl-carousel").show();
+            }
+        }
+        // $(document).ready(function () {
+        //     var screen = $(window).width();
+        //     if (screen > 789) {
+        //         console.log("adasdas");
+        //         $('#carousel').owlCarousel({
+        //             loop: true,
+        //             dots: false,
+        //             nav: true,
+        //             navText: ["<div class='prev-owl'>PREV</div>", "<div class='next-owl'>NEXT</div>"],
+        //             items: 1,
+        //             animateIn: "scaleUp",
+        //             autoplay: true,
+        //             autoplayTimeout: 3000,
+        //             autoplayHoverPause: true
+        //         });
+        //     } else {
+        //         $(".owl-carousel").show();
+        //     }
+        // });
     </script>
 </body>
 
