--- a/09.01.2021.html
+++ b/09.01.2021.html
@@ -239,8 +239,8 @@
         });
 
         function InitOwlCarousel() {
-            var screen = $(window).width();
-            if (screen > 789) {
+            // var screen = $(window).width();
+            // if (screen > 789) {
                 console.log("adasdas");
                 $('#carousel').owlCarousel({
                     loop: true,
@@ -253,9 +253,9 @@
                     autoplayTimeout: 3000,
                     autoplayHoverPause: true
                 });
-            } else {
-                $(".owl-carousel").show();
-            }
+            // } else {
+            //     $(".owl-carousel").show();
+            // }
         }
         // $(document).ready(function () {
         //     var screen = $(window).width();
