--- a/09.01.2021.html
+++ b/09.01.2021.html
@@ -4,8 +4,25 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Beautiful Memory</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+
+    <meta name="image" property="og:image" content="https://huyduong98.github.io/MyLove/Images/2 (78 of 164).jpg">
+    <meta name="description" content="Kỷ niệm bên nhau, Bộ ảnh đầu tiên hai đứa chụp chung 09.01.2021">
+    <meta name="keywords" content="Beautiful, Memory, 09.01.2021, Nóc hầm thủ thiêm, hầm thủ thiêm">
+
+    <meta property="og:title" content="Beautiful Memory" />
+    <meta property="og:type" content="product" />
+    <meta property="og:url" content="https://huyduong98.github.io/MyLove" />
+    <meta property="og:image" content="https://huyduong98.github.io/MyLove/Images/2 (78 of 164).jpg" />
+    <meta property="og:description" content="Kỷ niệm bên nhau, Bộ ảnh đầu tiên hai đứa chụp chung 09.01.2021" />
+
+    <meta name="twitter:title" content="Beautiful Memory">
+    <meta name="twitter:description" content="Kỷ niệm bên nhau, Bộ ảnh đầu tiên hai đứa chụp chung 09.01.2021">
+    <meta name="twitter:image" content="https://huyduong98.github.io/MyLove/Images/2 (78 of 164).jpg">
+    <meta name="twitter:card" content="summary_large_image">
+
+    <title>Beautiful Memory</title>
+    
     <link rel='stylesheet' type='text/css' href='src/css/owl.carousel.min.css'>
     <link rel='stylesheet' type='text/css' href='src/css/owl.theme.default.min.css'>
     <link rel='stylesheet' type='text/css' href='src/css/owl.theme.green.min.css'>
