--- a/09.01.2021.html
+++ b/09.01.2021.html
@@ -12,7 +12,7 @@
 
     <meta property="og:title" content="Beautiful Memory" />
     <meta property="og:type" content="product" />
-    <meta property="og:url" content="https://huyduong98.github.io/MyLove" />
+    <meta property="og:url" content="https://huyduong98.github.io/MyLove/09.01.2021.html" />
     <meta property="og:image" content="https://huyduong98.github.io/MyLove/Images/2 (78 of 164).jpg" />
     <meta property="og:description" content="Kỷ niệm bên nhau, Bộ ảnh đầu tiên hai đứa chụp chung 09.01.2021" />
 
