--- a/09.01.2021.html
+++ b/09.01.2021.html
@@ -22,6 +22,10 @@
     <meta name="twitter:card" content="summary_large_image">
 
     <title>Beautiful Memory</title>
+
+    <link rel="shortcut icon" href="Images/LogoHD.png" type="image/x-icon" sizes="180x180" />
+    <link rel="icon" type="image/png" href="Images/LogoHD.png" sizes="192x192">
+    <link rel="apple-touch-icon" sizes="180x180" href="Images/LogoHD.png">
     
     <link rel='stylesheet' type='text/css' href='src/css/owl.carousel.min.css'>
     <link rel='stylesheet' type='text/css' href='src/css/owl.theme.default.min.css'>
