--- a/09.01.2021.html
+++ b/09.01.2021.html
@@ -126,7 +126,7 @@
                 navText: ["<div class='prev-owl'>PREV</div>", "<div class='next-owl'>NEXT</div>"],
                 items: 1,
                 animateIn: "scaleUp",
-                autoplay: true,
+                // autoplay: true,
                 autoplayTimeout: 3000,
                 autoplayHoverPause: true
             });
