--- a/09.01.2021.html
+++ b/09.01.2021.html
@@ -26,7 +26,7 @@
     <link rel="shortcut icon" href="Images/LogoHD.png" type="image/x-icon" sizes="180x180" />
     <link rel="icon" type="image/png" href="Images/LogoHD.png" sizes="192x192">
     <link rel="apple-touch-icon" sizes="180x180" href="Images/LogoHD.png">
-    
+
     <link rel='stylesheet' type='text/css' href='src/css/owl.carousel.min.css'>
     <link rel='stylesheet' type='text/css' href='src/css/owl.theme.default.min.css'>
     <link rel='stylesheet' type='text/css' href='src/css/owl.theme.green.min.css'>
@@ -45,6 +45,13 @@
         </div>
     </div>
 
+
+    <div id="mydiv">
+        <!-- Include a header DIV with the same name as the draggable DIV, followed by "header" -->
+        <div id="mydivheader">
+            <img src="https://raw.githubusercontent.com/himalayasingh/music-player-1/master/img/_1.jpg">
+        </div>
+    </div>
     <!-- Music player -->
     <!-- Tracks used in this music/audio player application are free to use. I downloaded them from Soundcloud and NCS websites. I am not the owner of these tracks. -->
 
@@ -92,6 +99,7 @@
                         </div>
                     </div>
                 </div>
+                <a href="javascript:void(0)" class="btn-hide-player" id="hidePlayer">hide</a>
             </div>
         </div>
     </div>
@@ -126,11 +134,76 @@
                 navText: ["<div class='prev-owl'>PREV</div>", "<div class='next-owl'>NEXT</div>"],
                 items: 1,
                 animateIn: "scaleUp",
-                autoplay: true,
+                // autoplay: true,
                 autoplayTimeout: 3000,
-                autoplayHoverPause: true
+                autoplayHoverPause: true,
+                responsive: {
+                    0: {
+                        nav: false,
+                    },
+                    // breakpoint from 768 up
+                    768: {
+                        nav: true,
+                    }
+                }
             });
         }
+
+        // Make the DIV element draggable:
+        dragElement(document.getElementById("mydiv"));
+
+        function dragElement(elmnt) {
+            var pos1 = 0, pos2 = 0, pos3 = 0, pos4 = 0;
+            if (document.getElementById(elmnt.id + "header")) {
+                // if present, the header is where you move the DIV from:
+                document.getElementById(elmnt.id + "header").onmousedown = dragMouseDown;
+            } else {
+                // otherwise, move the DIV from anywhere inside the DIV:
+                elmnt.onmousedown = dragMouseDown;
+            }
+
+            function dragMouseDown(e) {
+                e = e || window.event;
+                e.preventDefault();
+                // get the mouse cursor position at startup:
+                pos3 = e.clientX;
+                pos4 = e.clientY;
+                document.onmouseup = closeDragElement;
+                // call a function whenever the cursor moves:
+                document.onmousemove = elementDrag;
+            }
+
+            function elementDrag(e) {
+                e = e || window.event;
+                e.preventDefault();
+                // calculate the new cursor position:
+                pos1 = pos3 - e.clientX;
+                pos2 = pos4 - e.clientY;
+                pos3 = e.clientX;
+                pos4 = e.clientY;
+                // set the element's new position:
+                elmnt.style.top = (elmnt.offsetTop - pos2) + "px";
+                elmnt.style.left = (elmnt.offsetLeft - pos1) + "px";
+            }
+
+            function closeDragElement() {
+                // stop moving when mouse button is released:
+                document.onmouseup = null;
+                document.onmousemove = null;
+            }
+        }
+
+        $(document).ready(function () {
+            
+            $("#mydivheader").click(function () {
+                $("#app-cover").toggleClass("draggable");
+                $("#mydiv").hide();
+            });
+            $("#hidePlayer").click(function () {
+                $("#app-cover").toggleClass("draggable");
+                $("#mydiv").show();
+            });
+        })
     </script>
     <script src='src/js/musicplayer.js'></script>
 
