--- a/09.01.2021.html
+++ b/09.01.2021.html
@@ -134,8 +134,8 @@
                 navText: ["<div class='prev-owl'>PREV</div>", "<div class='next-owl'>NEXT</div>"],
                 items: 1,
                 animateIn: "scaleUp",
-                // autoplay: true,
-                autoplayTimeout: 3000,
+                autoplay: true,
+                autoplayTimeout: 5000,
                 autoplayHoverPause: true,
                 responsive: {
                     0: {
